<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_airline_deals"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:text="@string/airlines"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:id="@+id/imageView1"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/avianca"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/avianca_logo" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/latam"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/latam_logo" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/united"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/united_logo" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="200dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/iberia"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/iberia_logo" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lowest_prices_in"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:text="@string/flights"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="275dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:id="@+id/imageView6"
                            android:layout_width="190dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/medellin"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/medellin" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:id="@+id/imageView7"
                            android:layout_width="190dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/bogota"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/bogota_2" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:id="@+id/imageView8"
                            android:layout_width="190dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/cartagena"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/cartagena" />
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:id="@+id/imageView9"
                            android:layout_width="190dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/san_andres"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/san_andres" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/get_to_know_every_city_in"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="7dp"
                    android:layout_weight="1"
                    android:text="@string/colombia"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:layout_marginTop="20dp"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardCornerRadius="8dp">

                        <ImageView
                            android:id="@+id/imageView10"
                            android:layout_width="400dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:contentDescription="@string/san_andres"
                            android:scaleType="fitXY"
                            app:srcCompat="@drawable/san_andres_2" />
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
            </HorizontalScrollView>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>